--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Roboto+Slab&display=swap');
+
 body {
-    background-color: darkgray;
-
-
+    background-color: rgb(19, 19, 19);
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto Slab', serif;
     
 }
