--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ h1 {
     font-size: 65px;
     color: antiquewhite;
 }
+
+.box{
+    width: 100px;
+    height: 100px;
+    border: 1px solid antiquewhite;
+    }
