--- a/style.css
+++ b/style.css
@@ -14,7 +14,13 @@ h1 {
 }
 
 .box{
-    width: 100px;
-    height: 100px;
     border: 1px solid antiquewhite;
+    height: 300px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin: auto;
+    margin-bottom: auto;
+
     }
