--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ h1 {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: auto;
-    margin: auto;
-    margin-bottom: auto;
+    border-radius: 10%;
 
-    }
+}
