--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ h1 {
 }
 
 .box{
-    border: 1px solid antiquewhite;
+    border: 2px solid antiquewhite;
     height: 300px;
     width: 500px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10%;
+    margin-bottom: 50px;
 
 }
