--- a/style.css
+++ b/style.css
@@ -15,16 +15,16 @@ body {
 
 li, a, button {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 25px;
     color: antiquewhite;
     text-decoration: none;
 }
 
 header {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 20px 10%;
 }
 
 .logo {
@@ -37,7 +37,7 @@ header {
 
 .nav__links li {
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0px 50px;
 }
 
 .nav__links li a {
@@ -60,8 +60,6 @@ button {
 button:hover {
     background-color: rgba(0,136,169,0.8);
 }
-    
-}
 
 h1 {
     text-align: center;
@@ -78,4 +76,15 @@ h1 {
     border-radius: 10%;
     margin-bottom: 50px;
 
+}
+
+.frontpage {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+    width: 100vh;
+    margin: auto;
+    padding: auto;
 }
