--- a/style.css
+++ b/style.css
@@ -88,3 +88,21 @@ h1 {
     margin: auto;
     padding: auto;
 }
+
+span::before {
+    content: "Matte";
+    animation: animate infinite 10s;
+    padding-left: 10px;
+    color: rgb(255, 133, 133);
+}
+
+@keyframes animate {
+
+    50% {
+        content: "Prosent";
+    }
+
+    100% {
+        content: "Brøk";
+    }
+}
