--- a/ler.css
+++ b/ler.css
@@ -10,8 +10,8 @@
   }
   
   body {
-    color: black;
-    background-color: white;
+    color: antiquewhite;
+    background-color: antiquewhite;
     margin: 0;
     padding: 0;
   }
@@ -281,7 +281,7 @@ button:hover {
 h1 {
     text-align: center;
     font-size: 65px;
-    color: antiquewhite;
+    color: #f76b6b;
 }
 
 .box{
