--- a/ler.css
+++ b/ler.css
@@ -31,6 +31,7 @@
   main {
     margin-left: 5rem;
     padding: 1rem;
+    padding-bottom: 300px;
   }
   
   .navbar {
@@ -398,10 +399,9 @@ ul{
 .informasjonLink {
     color: antiquewhite;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 1px;
     font-weight: lighter;
     font-style: bold;
-    font-style: italic;
     color: rgb(255, 104, 104);
 }
 
@@ -417,4 +417,8 @@ body::-webkit-scrollbar-thumb {
     background: #212121;
 }
 
-
+.centerP {
+  text-align: center;
+  margin: auto;
+  padding: auto;
+}
