--- a/style.css
+++ b/style.css
@@ -229,10 +229,22 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
     padding: auto;
     margin: auto;
+}
 .centerText {
     text-align: center;
+    color: antiquewhite;
 }
 
+.kebablink{
+    color: #f76b6b;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+h3{
+    color: #f76b6b;
+    font-size: larger;
+}
 .label {
     width: 50px;
     height: 26px;
@@ -263,3 +275,4 @@ body::-webkit-scrollbar-thumb {
 .fa-sun {
     color: #f39c12;
 }
+
