--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Roboto+Slab&display=swap');
-
+@import url();
 body {
     background-color: rgb(19, 19, 19);
     font-family: 'Nunito', sans-serif;
