--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-color: rgb(19, 19, 19);
     font-family: 'Nunito', sans-serif;
     font-family: 'Roboto Slab', serif;
+    color: antiquewhite;
 }
 
 * 
@@ -66,6 +67,7 @@ h1 {
     font-size: 65px;
     color: antiquewhite;
 }
+
 
 .box{
     border: 2px solid antiquewhite;
