--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Roboto+Slab&display=swap');
-@import url();
 body {
     background-color: rgb(19, 19, 19);
     font-family: 'Nunito', sans-serif;
@@ -26,6 +25,12 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 10%;
+}
+
+input[type="text"] {
+    background-color: #131313;
+    border-color: white;
+    border-radius: 50px;
 }
 
 .logo {
