--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ header {
 }
 
 input[type="text"] {
+    align-items: center;
+    margin: auto;
+    padding: auto;
+    width: 100px;
+    height: 50px;
     background-color: #131313;
     border-color: white;
     border-radius: 50px;
