--- a/style.css
+++ b/style.css
@@ -27,6 +27,26 @@ header {
     padding: 20px 10%;
 }
 
+select {
+    color: rgb(0,0,0);
+    border-radius: 100px;
+    width: 45px;
+    height: 40px;
+    margin: auto;
+    padding: auto;
+    font-size: 25px;
+    align-items: center;
+}
+input[type="button"] {
+    color: rgb(0,0,0);
+    align-items: center;
+    margin: auto;
+    padding: auto;
+    border-radius: 100px;
+    width: 40px;
+    height:40px;
+}
+
 input[type="text"] {
     font-size: larger;
     text-align: center;
