--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ input[type="button"] {
     border-radius: 100px;
     width: 40px;
     height:40px;
+    font-size: 25px;
 }
 
 input[type="text"] {
